pages/docs/manual/v11.0.0/faq.mdx
---
title: "FAQ"
description: "Frequently asked questions about ReScript and its ecosystem"
canonical: "/docs/manual/v11.0.0/faq"
---

# Frequently Asked Questions

**What's the goal of this project?**

We aim to provide the best typed language experience for the JavaScript platform.

**What’s the relationship with BuckleScript?**

BuckleScript is ReScript's old branding, with a sharper focus on proper JS support and familiarity which we previously couldn't achieve to the degree we wanted, due to us needing to cater to various different crowds.

**What’s ReScript's relationship with OCaml?**

We reuse and adjust the excellent type system and lots of other high quality components from OCaml for JS experience.
Additionally, ReScript provides its own syntax, build system, IDE, backend, JS interop, extra language features, etc.

The ReScript toolchain is developed using OCaml, however, the version of ReScript is decoupled against the version of OCaml,
ReScript compiler should build against any reasonable modern version of OCaml compiler.

For the majority of ReScript users, they don't need to learn OCaml or use OCaml toolchain to be productive in ReScript.

**What’s the relationship with Reason?**

See [here](/blog/bucklescript-is-rebranding). Reason is a syntax layer for OCaml that BuckleScript also adopted. The current ReScript compiler also supports the old Reason syntax v3.6 for backward compatibility. We will support it for a long time to make sure existing users do not get breaking changes.

**I come from Reason/OCaml. Will ReScript keep supporting X?**

Please see our [blog post](/blog/a-note-on-bucklescripts-future-commitments) on this matter.

**Where can I see the docs in old Reason/OCaml syntax?**

Switch the doc version to `v8.0.0` in the sidebar on the left!

**Will ReScript support native compilation eventually?**

Our focus is a solid JS story right now. In the future, if there’s strong demand, we might consider it.

**What’s the current state of ReScript?**

We're working on the v12.0 release (see [v12 milestone](https://github.com/rescript-lang/rescript/milestone/16)).

- Move the [Rescript Core](https://github.com/rescript-lang/rescript-core) standard library into the compiler / remove the OCaml standard library
- A new build system tailored to ReScript's needs ([rewatch](https://github.com/teamwalnut/rewatch)) for better monorepo support and even faster compilation speed
- Make it easier to create libraries for consumption from TypeScript with GenType

**When will we get the `async/await` keywords?**

async/await has arrived in ReScript 10.1!

**Why create a new syntax?**

The existing Reason syntax is owned by a different team with a different vision. Reason aims to be 100% compatible with OCaml syntax and to support all versions of OCaml. In the last few years, we've drawn the conclusion that it’s very hard to deliver such goal without sacrificing user experience. The other reason is that we feel it’s better to have the same vision as a team so that we can make more coherent decisions.

**Who is behind the project?**

The ReScript team (Hongbo, Cheng, Cristiano, Maxim, Patrick, Ricky).

**We have a new forum; will we also have our own Discord?**

Not now. We've found that too much important information get casually passed in Discord then lost within the noise. We prefer folks to communicate on the [forum](https://forum.rescript-lang.org). This is nicer to the less active members.

The team doesn't use the old Discord anymore. We encourage you to move your questions to the forum instead.
